@@ -80,7 +80,7 @@ Quick start:</h3>
 <br>&nbsp;
 <p>&nbsp; 1. Start Naming_Service
 <p>
-<br>&nbsp;&nbsp; $ $TAO_ROOT/orbsvcs/Naming_Service/Naming_Service -m 1
+<br>&nbsp;&nbsp; $ $TAO_ROOT/orbsvcs/Naming_Service/tao_cosnaming -m 1
 <br>&nbsp;&nbsp;&nbsp;&nbsp; or you can use the shell script NameService
 in this directory to start it.
 <p>&nbsp; 2. Start the ftrt_eventservice. Use the "-p" option to start
