@@ -330,7 +330,7 @@ Quoter_Stock_i::disconnect_push_supplier (void)
     <P>To test your changes you need to run four programs,
       first TAO's Naming Service:
 <PRE>
-$ $TAO_ROOT/orbsvcs/Naming_Service/Naming_Service -m 1
+$ $TAO_ROOT/orbsvcs/Naming_Service/tao_cosnaming -m 1
 </PRE>
     <P>The CORBA Event Service
     </P>
